--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,13 @@
 header {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     width: 100%;
     height: 9.6rem;
     border-bottom: 1.5px solid rgb(255, 255, 255, 0.1);
+    z-index: 2;
 
     .container {
         display: flex;
