--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,142 +1,179 @@
 .s-hero {
-    .swiper-wrapper {
-        width: 100%;
-        height: 73.6rem;
+    position: relative;
 
-        .swiper-slide {
-            padding-top: 20.7rem;
+    .slide-principal {
+        .swiper-wrapper {
+            width: 100%;
+            height: 73.6rem;
 
-            &.slide-01 {
-                background: url("../assets/img/banner-slide-01.jpg") no-repeat center center;
-            }
+            .swiper-slide {
+                padding-top: 20.7rem;
 
-            &.slide-02 {
-                background: url("../assets/img/banner-slide-02.jpg") no-repeat center center;
-                background-size: cover;
-                
-            }
-
-            &.slide-03 {
-                background: url("../assets/img/banner-slide-03.jpg") no-repeat center center;
-                background-size: cover;
-            }
-
-            .container {
-                display: flex;
-                align-items: flex-start;
-                justify-content: space-between;
-            }
-
-            .left-content {
-                margin-left: 19.5rem;
-                width: 100%;
-                max-width: 56.2rem;
-
-                h2 {
-                    font-weight: 700;
-                    font-size: 6.4rem;
-                    line-height: 110.2%;
-                    color: $white;
-                    margin-bottom: 1.6rem;
+                &.slide-01 {
+                    background: url("../assets/img/banner-slide-01.jpg") no-repeat center center;
                 }
 
-                p {
-                    font-size: 1.8rem;
-                    line-height: 2.7rem;
-                    letter-spacing: -0.005em;
-                    color: $white;
-                    margin-bottom: 3.2rem;
+                &.slide-02 {
+                    background: url("../assets/img/banner-slide-02.jpg") no-repeat center center;
+                    background-size: cover;
+
                 }
 
-                .btn {
-                    padding: 0 3.8rem;
-                    line-height: 5rem;
+                &.slide-03 {
+                    background: url("../assets/img/banner-slide-03.jpg") no-repeat center center;
+                    background-size: cover;
+
+                    .left-content {
+                        max-width: 62.6rem;
+                    }
                 }
-            }
 
-            .right-content {
-                width: 100%;
-                max-width: 29.2rem;
-                margin-top: -3.4rem;
-
-                .logo {
-                    width: 100%;
-                    max-width: 28rem;
-                    height: 18rem;
+                .container {
                     display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    margin-bottom: 8.6rem;
+                    align-items: flex-start;
+                    justify-content: space-between;
                 }
 
-                .video {
+                .left-content {
+                    margin-left: 19.5rem;
                     width: 100%;
-                    max-width: 28rem;
+                    max-width: 56.2rem;
 
-                    span {
-                        display: block;
-                        text-align: right;
-                        font-weight: 600;
-                        font-size: 1.3rem;
-                        line-height: 2rem;
-                        text-transform: uppercase;
+                    h2 {
+                        font-weight: 700;
+                        font-size: 6.4rem;
+                        line-height: 110.2%;
                         color: $white;
                         margin-bottom: 1.6rem;
                     }
 
-                    .btn-video {
-                        position: relative;
+                    p {
+                        font-size: 1.8rem;
+                        line-height: 2.7rem;
+                        letter-spacing: -0.005em;
+                        color: $white;
+                        margin-bottom: 3.2rem;
+                    }
+
+                    .btn {
+                        padding: 0 3.8rem;
+                        line-height: 5rem;
+                    }
+                }
+
+                .right-content {
+                    width: 100%;
+                    max-width: 29.2rem;
+                    margin-top: -3.4rem;
+
+                    .logo {
                         width: 100%;
-                        height: 15.8rem;
-                        border-radius: 0.4rem;
-                        overflow: hidden;
+                        max-width: 28rem;
+                        height: 18rem;
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        margin-bottom: 8.6rem;
+                    }
 
-                        .thumb {
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                            transition: all .3s;
+                    .video {
+                        width: 100%;
+                        max-width: 28rem;
 
-                            &:hover {
-                                &.default {
-                                    opacity: 0;
-                                }
-
-                                &.hover {
-                                    opacity: 1;
-                                }
-                            }
-
-                            &.default {
-                                opacity: 1;
-                            }
-
-                            &.hover {
-                                opacity: 0;
-                            }
+                        span {
+                            display: block;
+                            text-align: right;
+                            font-weight: 600;
+                            font-size: 1.3rem;
+                            line-height: 2rem;
+                            text-transform: uppercase;
+                            color: $white;
+                            margin-bottom: 1.6rem;
                         }
 
-                        .icon {
+                        .btn-video {
                             position: relative;
-                            z-index: 1;
-                            width: 5.1rem;
-                            height: 5.1rem;
-                            border-radius: 50%;
-                            background: linear-gradient(136.72deg, rgba(7, 7, 10, 0.86) 19.22%, rgba(15, 16, 22, 0.5) 76.59%);
-                            backdrop-filter: blur(1.5px);
+                            width: 100%;
+                            height: 15.8rem;
+                            border-radius: 0.4rem;
+                            overflow: hidden;
                             display: flex;
                             align-items: center;
                             justify-content: center;
+
+                            .thumb {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                                transition: all .3s;
+
+                                &:hover {
+                                    &.default {
+                                        opacity: 0;
+                                    }
+
+                                    &.hover {
+                                        opacity: 1;
+                                    }
+                                }
+
+                                &.default {
+                                    opacity: 1;
+                                }
+
+                                &.hover {
+                                    opacity: 0;
+                                }
+                            }
+
+                            .icon {
+                                position: relative;
+                                z-index: 1;
+                                width: 5.1rem;
+                                height: 5.1rem;
+                                border-radius: 50%;
+                                background: linear-gradient(136.72deg, rgba(7, 7, 10, 0.86) 19.22%, rgba(15, 16, 22, 0.5) 76.59%);
+                                backdrop-filter: blur(1.5px);
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                            }
                         }
                     }
                 }
             }
         }
     }
+
+    .slide-thumbnail {
+        position: absolute;
+        top: 24.1rem;
+        left: 15%;
+        z-index: 2;
+        height: 32rem;
+
+        .swiper-wrapper {
+            .swiper-slide {
+                width: 100%;
+                max-width: 4.8rem;
+                height: 4.8rem;
+                cursor: pointer;
+                opacity: 0.4;
+                filter: grayscale(100%);
+
+                &.disabled {
+                    pointer-events: none;
+                }
+
+                &-thumb-active {
+                    opacity: 1;
+                    filter: grayscale(0%);
+                }
+            }
+        }
+    }
+
 }
